# IZ_CC

./: CMakeLists.txt  README.md  gitlab-ci.yml
code/include/: megafile.h  myfilter.h  myinput.h
code/src/: main.c  megafile.c  myfilter.c  myinput.c  tests.cpp
linters/: run.sh
